--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,17 +12,16 @@
             android:id="@+id/imageButton"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:layout_marginTop="10dp"
             android:onClick="score"
-            android:visibility="visible"
-            app:srcCompat="@drawable/cr4"
-            tools:layout_editor_absoluteX="10dp"
-            tools:layout_editor_absoluteY="74dp" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/layoutTime"
+            app:srcCompat="@drawable/cr4" />
 
         <LinearLayout
             android:id="@+id/layoutTime"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="119dp"
             android:gravity="center"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
